# slashies

./: .gitignore  Cargo.toml  cargo.toml  readme.md
examples/: example.env  readme.md
examples/e01_hello_world/: Cargo.toml  readme.md
examples/e01_hello_world/src/: main.rs
examples/e02_complex_commands/: Cargo.toml  readme.md
examples/e02_complex_commands/src/: main.rs
examples/e02_madlibs/: Cargo.toml  readme.md
examples/e02_madlibs/src/: main.rs
examples/e03_moviebot/: Cargo.toml  readme.md
examples/e03_moviebot/src/: main.rs
examples/e03_option_attributes/: Cargo.toml  readme.md
examples/e03_option_attributes/src/: main.rs  movie.rs
examples/e04_permissions/: Cargo.toml  README.md
examples/e04_permissions/src/: main.rs
examples/e04_subcommands_and_groups/: Cargo.toml
examples/e04_subcommands_and_groups/src/: main.rs
migrations/2020-12-23-053635_version_1_0_0/: down.sql  up.sql
slash-helper/: Cargo.toml
slash-helper-macros/: Cargo.toml
slash-helper-macros/src/: command.rs  commands.rs  lib.rs  subcommand.rs  subcommandgroup.rs  utility.rs
slash-helper-macros/tests/command/: e01_no_docstring_on_field.rs  e02_invalid_docstring_on_field.rs  e02_invalid_docstring_on_field.stderr  e03_no_docstring_on_struct.rs  e04_invalid_docstring_on_struct.rs  e05_struct_with_unnamed_fields.rs  e06_unnamed_sub_command.rs  e06_unnamed_sub_command.stderr  e07_invalid_sub_command_name.rs  e08_invalid_command_enum.rs  e09_unnamed_struct.rs  e09_unnamed_struct.stderr  e10_not_a_struct_or_enum.rs  e11_subcommand_not_implemented.rs  e11_subcommand_not_implemented.stderr  e12_invalid_choices_format.rs  e12_invalid_choices_format.stderr  e13_invalid_choices_format_2.rs  e13_invalid_choices_format_2.stderr  e14_invalid_choices_types.rs  e15_invalid_channel_types_format.rs  e15_invalid_channel_types_format.stderr  e16_invalid_channel_types_invalid_types.rs  e17_invalid_min_format.rs  e18_invalid_min_type.rs  e19_invalid_max_format.rs  e20_invalid_max_type.rs
slash-helper-macros/tests/commands/: e01_not_an_enum.rs  e01_not_an_enum.stderr  e02_bad_enum_structure.rs  e03_command_not_implemented.rs  e03_command_not_implemented.stderr
slash-helper/src/: lib.rs  parsable.rs
slashies/: Cargo.toml  README.md
slashies-macros/: Cargo.toml  README.md
slashies-macros/src/: command.rs  lib.rs  subcommand.rs  subcommandgroup.rs  utility.rs
slashies-macros/tests/command/: e01_no_docstring_on_field.rs  e01_no_docstring_on_field.stderr  e02_invalid_docstring_on_field.rs  e03_no_docstring_on_struct.rs  e03_no_docstring_on_struct.stderr  e04_invalid_docstring_on_struct.rs  e04_invalid_docstring_on_struct.stderr  e05_struct_with_unnamed_fields.rs  e05_struct_with_unnamed_fields.stderr  e06_unnamed_sub_command.rs  e07_invalid_sub_command_name.rs  e07_invalid_sub_command_name.stderr  e08_invalid_command_enum.rs  e08_invalid_command_enum.stderr  e09_unnamed_struct.rs  e10_not_a_struct_or_enum.rs  e10_not_a_struct_or_enum.stderr  e11_subcommand_not_implemented.rs  e11_subcommand_not_implemented.stderr  e12_invalid_choices_format.rs  e13_invalid_choices_format_2.rs  e14_invalid_choices_types.rs  e14_invalid_choices_types.stderr  e15_invalid_channel_types_format.rs  e15_invalid_channel_types_format.stderr  e16_invalid_channel_types_invalid_types.rs  e16_invalid_channel_types_invalid_types.stderr  e17_invalid_min_format.rs  e17_invalid_min_format.stderr  e18_invalid_min_type.rs  e18_invalid_min_type.stderr  e19_invalid_max_format.rs  e19_invalid_max_format.stderr  e20_invalid_max_type.rs  e20_invalid_max_type.stderr
slashies-macros/tests/commands/: e01_not_an_enum.rs  e02_bad_enum_structure.rs  e02_bad_enum_structure.stderr  e03_command_not_implemented.rs  e03_command_not_implemented.stderr
slashies/src/: lib.rs  parsable.rs
src/: commands.rs  counting.rs  database.rs  formatting.rs  main.rs  models.rs  schema.rs
src/commands/: count.rs  gethaiku.rs  mod.rs  random.rs  search.rs  test.rs  test_sub.rs  test_sub_groups.rs  uptime.rs
