[package]
name = "haikubot-rs"
version = "0.1.0"
authors = ["Luke Wolyncewicz <luke@bumblepie.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9"
tokio = { version = "0.2", features = ["macros"] }
regex = "1"
cached = "0.22"
lazy_static = "1"