[package]
name = "haikubot-rs"
version = "0.1.0"
authors = ["Luke Wolyncewicz <luke@bumblepie.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = [
    "cache",
    "client",
    "collector",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
cached = "0.22"
lazy_static = "1"
chrono = "0.4"
diesel = { version = "1", features = ["postgres", "chrono"] }
rand = "0.7"
diesel_full_text_search = "1"
dashmap = "5.2"
slash-helper = { path = "./slash-helper" }
slash-helper-macros = { path = "./slash-helper-macros" }
