[package]
name = "slashies-macros"
description = "Provides the derive macros for the slashies crate"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/bumblepie/slashies"
license = "MIT"
keywords = ["discord"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
slashies = { path = "../slashies", version = "0.1" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serenity = { version = "0.11", default-features = false, features = [
    "cache",
    "client",
    "collector",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
] }
itertools = "0.10"
proc-macro-error = "1.0"

[dev-dependencies]
trybuild = "1.0"
