[package]
name = "slashies"
description = "Slashies helps to reduce the boiler plate code needed to create slash commands for a Discord bot."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bumblepie/slashies"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "cache",
    "client",
    "collector",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
] }
