[package]
name = "slashies"
description = "Slashies helps to reduce the boiler plate code needed to create slash commands for a Discord bot."
version = "0.1.3"
edition = "2021"
repository = "https://github.com/bumblepie/slashies"
license = "MIT"
keywords = ["discord"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "cache",
    "client",
    "collector",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
] }

[dev-dependencies]
slashies-macros = { path = "../slashies-macros" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
