[package]
name = "e04_permissions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11", default-features = false, features = [
    "cache",
    "client",
    "collector",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
] }
slashies = { path = "../../slashies" }
slashies-macros = { path = "../../slashies-macros" }
